src/scss/_main.scss
/* ... */
.pager-actions {
  display: flex;
  justify-content: space-between;
}

.pager-icon-next svg {
  margin-right: 0; // override global margin on svgs in buttons
  margin-left: 0.5em;
}

.icon.favorite-star {
  fill: none;
  stroke: var(--color-yellow);
  stroke-width: var(--line-width);
}

.icon.favorite-star.favorited {
  fill: var(--color-yellow);
}

.builds-favorite {
  display: flex;
  align-items: center;
}

// general utility class for callouts
.notice {
  padding: 1rem;

  font-size: 1rem;

  background: var(--color-bg-light);
}

// style for contextual help dropdown
.help {
  position: relative;
}

.tooltip {
  position: absolute;
  top: 1.8rem;
  right: 0;
  z-index: 999999;

  min-width: 400px;
  padding: 1rem;

  font-weight: normal;
  font-size: 0.8rem;

  background: var(--color-bg-dark);
  border: solid var(--line-width) var(--color-bg-light);

  // triangle tip
  &::after {
    display: block;
    position: absolute;
    content: "";
    top: -0.5rem;
    right: 0;
    border-color: transparent;
    border-style: solid;
    border-width: 0 0.5rem 0.5rem 0.5rem;
    border-bottom-color: var(--color-bg-light);
  }
}

.cmd {
  display: flex;
  justify-content: space-between;
}

.cmd-text {
  border: none;
  padding: 0.5rem;
  margin: 0.2rem 0;
  color: var(--color-text);
  background-color: var(--color-bg);
  flex: 1;

  + .button {
    margin-left: 0.5rem;
  }
}

.help.details .summary {
  overflow: initial;
}

/* stylelint-disable selector-max-specificity */
.help.details[open] .summary + *:first-of-type {
  margin-top: 0.25rem;
}
/* stylelint-enable selector-max-specificity */

.help-footer {
  display: flex;
  justify-content: flex-end;
  margin: 1rem 0.5rem 0 1rem;

  > a {
    margin-left: 1rem;
  }
}

.help-footer div {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  margin-top: 8px;
  margin-right: 8px;

  > a {
    margin-left: 6px;

    text-align: right;
  }
}

.copy-display {
  padding: 0.5rem;

  color: var(--color-text);

  background-color: var(--color-bg-dark);

  border: none;
}

// class for basic list styling
.list {
  font-size: 1rem;

  li {
    margin-bottom: 1rem;
  }
}

// build filters
.build-filters {
  justify-content: flex-start;
  margin: 1rem 0;
  padding: 1rem;

  font-size: 1rem;

  background-color: var(--color-bg-dark);

  .form-control {
    margin-left: 1rem;
  }

  // TODO: revisit the following
  .form-control .form-label::before,
  .form-control .form-label::after {
    top: 2px;
  }

  @media only screen and (max-width: 40em) {
    flex-flow: wrap column;

    .form-control {
      margin: 0.5rem 1rem;
    }
  }
}

.secrets-first-cell {
  padding: 0.5rem 1rem;
  padding-bottom: 0;
  color: var(--color-primary);
  font-size: 1.2rem;
}

.manage-secret .header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem 0;
  border-bottom: 2px solid var(--color-secondary);
}

.manage-secret h2 {
  margin: 0;
  border-bottom: 2px solid var(--color-secondary);
}

.secret-form {
  margin-bottom: 0.5rem;
  padding-top: 1rem;
}

.secret-form section {
  justify-content: flex-start;
  margin-bottom: 1rem;
}

.secret-form .events {
  padding-left: 1rem;
}

.images {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.add-image {
  margin-left: 1rem;
}

.added-image {
  margin: 0.2rem 1rem;
  display: flex;
  padding: 0.3rem 1rem;
  align-items: center;
  background: var(--color-bg-dark);
  position: relative;
}

.added-image .name {
  flex: 1;
  word-wrap: break-word;
  font-family: var(--font-code);
  font-size: 0.9rem;
}

.images .added-image .button {
  margin-left: 1rem;
}

.added-image.chevron {
  margin-left: 2rem;
}

.added-image.chevron:before {
  content: "";
  border-style: solid;
  border-width: 0.1rem 1rem 0.1rem 0.2rem;
  border-color: var(--color-primary);
  position: absolute;
  left: -1.5rem;
}

.no-rows {
  padding: 1rem;
}

.manage-secret .subheader {
  margin-top: 1rem;
  border-bottom: 2px solid var(--color-primary);
  width: 80%;
}

.manage-secret textarea,
.update-secret textarea {
  width: 70%;
  border: none;
  box-shadow: none;
  background: var(--color-bg-dark);
  color: var(--color-text);
  font-size: 1rem;
  font-weight: 300;
  margin-bottom: 0.5rem;
  padding: 0.5rem;
}

.manage-secret input {
  max-width: 400px;
}

.manage-secret textarea {
  max-width: 70%;
}

.secret-form .help {
  padding-bottom: 1rem;
}

.secret-form .form-action {
  padding-left: 1rem;
}

.field-description {
  font-size: 1rem;
  font-weight: 300;
  margin-left: 1rem;
}

.field-header {
  margin-top: 1rem;
  margin-bottom: 0.25rem;
  margin-left: 1rem;
}

// visually hide, but keep accessible by screen readers
.visually-hidden {
  @include visually-hidden();
}

.break-all {
  word-break: break-all;
}

.break-word {
  word-wrap: break-word;
}

.-overflow-auto {
  overflow: auto;
}

